<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightbluegrey"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal">


    <!-- Title in the center -->
    <TextView
        android:id="@+id/textviewwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartspend"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginBottom="30dp" />

    <!-- Full Name Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_gravity="start" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="text"
        android:background="@android:drawable/edit_text"
        android:hint="@string/enter_your_full_name"
        android:inputType="textFilter"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#546E7A"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_gravity="start" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="numbers"
        android:background="@android:drawable/edit_text"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#546E7A"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_gravity="start" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="numbers"
        android:background="@android:drawable/edit_text"
        android:hint="@string/re_enter_password"
        android:inputType="numberPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#546E7A"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>

