<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/SlateGray">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="102dp"
        android:fontFamily="sans-serif"
        android:text="@string/smartspend1"
        android:textColor="#546E7A"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="numbers"
        android:background="@drawable/edittext_background"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#8D6E63" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#546E7A"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
